--- a/Reinco/Reinco.Android/packages.config
+++ b/Reinco/Reinco.Android/packages.config
@@ -1,11 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="monoandroid60" />
+  <package id="ExcelLibrary" version="1.2011.7.31" targetFramework="monoandroid71" />
+  <package id="ExcelReports" version="1.11.0.0" targetFramework="monoandroid71" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="monoandroid71" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="monoandroid71" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="monoandroid71" />
   <package id="Plugin.CurrentActivity" version="1.0.1" targetFramework="monoandroid60" />
   <package id="Plugin.Permissions" version="1.2.1" targetFramework="monoandroid60" />
+  <package id="Syncfusion.Xamarin.Compression" version="15.1.0.41" targetFramework="monoandroid71" />
+  <package id="Syncfusion.Xamarin.XlsIO" version="15.1.0.41" targetFramework="monoandroid71" />
   <package id="System.Data.Common" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="monoandroid71" />
   <package id="Xam.Plugin.Media" version="2.6.2" targetFramework="monoandroid60" />
